# azulSP

./: .gitignore  README.md  TODO  package-lock.json  package.json
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/tilebag/: TileBag.ts
app/ui/: gameCenter.module.css  gameCenter.tsx
app/ui/Factory/: Factory.tsx  factory.module.css  factory.tsx
app/ui/Tile/: TileColor.ts  tile.module.css  tile.tsx
app/ui/Tiles/: Tile.tsx  TileColor.ts  TileFactory.tsx  tile.module.css  tile.tsx
app/ui/board/: board.module.css  board.tsx
app/ui/customHooks/: useWindowDimensions.tsx
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/game/: bag.rs  board.rs  center.rs  factory.rs  mod.rs  tile.rs
frontend/: next.config.mjs
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 892.js
frontend/.next/server/pages/: 500.html
frontend/.next/static/chunks/: main-app-889633e18d966bc7.js  (+1 more)
frontend/app/: page.module.css  page.tsx
frontend/app/game/: Game.ts
frontend/app/tilebag/: SquareTileBag.ts
frontend/app/ui/: gameCenter.tsx
(+22 files in other folders)
