[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
strum_macros = "0.26.4"
strum = "0.26.2"
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper = "1.4.1"
lazy_static = "1.5.0"